<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_general"
    tools:context=".MatchActivity">


    <TextView
        android:id="@+id/IDSetupDirections"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:text="@string/SetupDirections"
        android:textColor="@drawable/text_states"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="108dp" />

    <EditText
        android:id="@+id/ScouterNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:hint="@string/HINT_NAME"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:tag="ScouterName"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="156dp" />

    <EditText
        android:id="@+id/FirstAlliancePartnerInput"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:hint="@string/HINT_TEAM_NUMBER"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="4"
        android:nextFocusDown="@+id/SecondAlliancePartnerInput"
        android:tag="Alliance1"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="389dp" />

    <TextView
        android:id="@+id/IDScouterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ScouterNameID"
        android:textColor="@drawable/text_states"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="132dp" />

    <Switch
        android:id="@+id/NoShowSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/button_active"
        android:foregroundTint="@color/button_active"
        android:scaleX="2"
        android:scaleY="2"
        android:textColor="@drawable/text_states"
        android:thumbTint="@color/switch_default"
        tools:layout_editor_absoluteX="381dp"
        tools:layout_editor_absoluteY="388dp" />
    <!-- TODO: test if switch active states are properly changing thumb and track colors to orange-->

    <TextView
        android:id="@+id/IDMatchNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MatchNumberID"
        android:textColor="@drawable/text_states"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="210dp" />

    <EditText
        android:id="@+id/SecondAlliancePartnerInput"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:hint="@string/HINT_TEAM_NUMBER"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="4"
        android:tag="Alliance2"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="204dp"
        tools:layout_editor_absoluteY="389dp" />

    <TextView
        android:id="@+id/IDAlliancePartners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AlliancePartnersID"
        android:textColor="@drawable/text_states"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="364dp" />

    <TextView
        android:id="@+id/IDNoShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoShow"
        android:textColor="@drawable/text_states"
        tools:layout_editor_absoluteX="435dp"
        tools:layout_editor_absoluteY="396dp" />

    <TextView
        android:id="@+id/IDAllianceColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AllianceColorID"
        android:textColor="@drawable/text_states"
        tools:layout_editor_absoluteX="361dp"
        tools:layout_editor_absoluteY="459dp" />

    <RadioGroup
        android:id="@+id/MissedToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="middle"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="481dp">

        <RadioButton
            android:id="@+id/ScoredButton"
            android:layout_width="100dp"
            android:layout_height="47dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/toggle_left_default"
            android:button="@drawable/button_rounded_corners"
            android:gravity="center"
            android:text="@string/Blue"
            android:textColor="@drawable/text_states"
            tools:visibility="visible" />

        <RadioButton
            android:id="@+id/MissedButton"
            android:layout_width="100dp"
            android:layout_height="47dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/toggle_right_default"
            android:button="@drawable/button_rounded_corners"
            android:gravity="center"
            android:text="@string/Red"
            android:textColor="@drawable/text_states"
            tools:visibility="visible" />
    </RadioGroup>

    <TextView
        android:id="@+id/IDSetup"
        android:layout_width="74dp"
        android:layout_height="0dp"
        android:text="@string/SetupTitle"
        android:textColor="@drawable/text_states"
        app:fontFamily="sans-serif-black"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="86dp" />

    <TextView
        android:id="@+id/IDStartingPosition"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/StartingPositionTitle"
        android:textColor="@drawable/text_states"
        app:fontFamily="sans-serif-black"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="577dp" />

    <TextView
        android:id="@+id/IDStartingPositionDirections"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/StartingPositionDirections"
        android:textColor="@drawable/text_states"
        app:fontFamily="sans-serif"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="607dp" />

    <TextView
        android:id="@+id/IDTeamNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TeamNumberID"
        android:textColor="@drawable/text_states"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="286dp" />

    <EditText
        android:id="@+id/TeamNumberInput"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:hint="@string/HINT_TEAM_NUMBER"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="4"
        android:tag="TeamNumber"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="310dp" />

    <EditText
        android:id="@+id/MatchNumberInput"
        android:layout_width="405dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:hint="@string/HINT_MATCH_NUMBER"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:tag="MatchNumber"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="234dp" />

    <TextView
        android:id="@+id/IDAllianceColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AllianceColorID"
        android:textColor="@drawable/text_states"
        tools:layout_editor_absoluteY="962dp" />

    <Button
        android:id="@+id/ClearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_corners"
        android:text="@string/Clear"
        android:textColor="@drawable/text_states"
        tools:layout_editor_absoluteX="189dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/ClimbNextButton"
        android:layout_width="473dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_corners"
        android:enabled="false"
        android:text="@string/Start"
        android:textColor="@drawable/text_states"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="883dp" />

    <TextView
        android:id="@+id/IDStartButtonDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartButtonDirections"

        android:textColor="@color/text_alert"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="846dp" />

    <Button
        android:id="@+id/SettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_corners"
        android:text="@string/SettingsTitle"
        android:textColor="@drawable/text_states"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>