<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_clear_confirm_popup"
    android:minWidth="400dp"
    android:minHeight="900dp">

    <Button
        android:id="@+id/ExitConfirm"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_active"
        android:text="@string/ExitTitle"
        android:textColor="@drawable/text_states"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IDQRWarningDirections" />

    <Button
        android:id="@+id/CancelConfirm"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:background="@android:color/transparent"
        android:text="@string/Cancel"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExitConfirm" />

    <TextView
        android:id="@+id/IDQRWarningDirections"
        android:layout_width="479dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="@string/ExitWarning"
        android:textColor="@color/bootstrap_brand_secondary_border"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IDExit" />

    <TextView
        android:id="@+id/IDExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="232dp"
        android:fontFamily="@font/gudea_bold"
        android:gravity="center_horizontal"
        android:text="@string/QRCodeTitle"
        android:textColor="@drawable/header_states"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>